--- a/Today/Base.lproj/Main.storyboard
+++ b/Today/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="6gE-H9-Rzn">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="m5b-AA-A0g">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22685"/>
@@ -27,10 +27,29 @@
                             <outlet property="delegate" destination="6gE-H9-Rzn" id="Vl5-5T-geM"/>
                         </connections>
                     </collectionView>
+                    <navigationItem key="navigationItem" id="xze-Xn-wt5"/>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FH3-vD-TOs" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-192" y="-85"/>
+            <point key="canvasLocation" x="733.58778625954199" y="-85.211267605633807"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="CLz-5Y-KGn">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="m5b-AA-A0g" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="zk8-Mh-iWJ">
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="6gE-H9-Rzn" kind="relationship" relationship="rootViewController" id="g2E-ps-vuW"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="YOR-XU-39G" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-193.12977099236642" y="-85.211267605633807"/>
         </scene>
     </scenes>
     <resources>
